gccida/g3/fixup_stack_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_stack_1/src/function.c:3160:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_stack_1/src/function.c:3172:66: error: use of undeclared identifier 'machine_mode'
if ( **( _WORD **)( v7.rtwint + 16) != 54 || memory_address_p( ( machine_mode)*( ( unsigned __int8 *)x + 2), v7.rtx) ) 
                                                                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_stack_1/src/obj/function.o] Error 1
